[package]
name = "labo3"
version = "0.1.0"
authors = ["Alexandre Duc <alexandre.duc@heig-vd.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
once_cell = "1.16"
casbin = { version = "2.0.9", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
tokio = { version = "1.10.0", features = ["fs", "io-util"] }
csv = "1.1"
futures = "0.3"
regex = "1"
dryoc = { version = "0.4.3", features = ["base64", "serde"] }
base64 = "0.21.0"
